Make Link Context Menu Optional
Made the following changes Per discussion of issue #228 in Feb 6 authoring practices meeting.

modified aria-practices.html:
In the link pattern section, keyboard subsection, marked the context menu key (shift+f10) as optional.

modified examples/link/link.html:
In the example introduction, added the following sentence to the note encouraging authors to use native HTML links:
"Browsers provide valuable functionality for native HTML links, e.g., open the target in a new window and copy the target URL to the system clipboard."

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1092,7 +1092,7 @@
         <h4>Keyboard Interaction</h4>
         <ul>
           <li><kbd>Enter</kbd>: Executes the link and moves focus to the link target.</li>
-          <li><kbd>Shift + F10</kbd>: Opens the link's context menu.</li>
+          <li><kbd>Shift + F10</kbd> (Optional): Opens a context menu for the link.</li>
         </ul>
       </section>
       <section class="notoc">
