--- a/examples/link/link.html
+++ b/examples/link/link.html
@@ -26,7 +26,10 @@
     <a href="../../#link">design pattern for link</a>.
      The link pattern is used when it is necessary for elements other than the HTML <code>a</code> element to have link behaviors.
   </p>
-  <p><strong>Note:</strong> Use the HTML <code>a</code> element to create links whenever possible.</p>
+  <p>
+    <strong>Note:</strong> Use the HTML <code>a</code> element to create links whenever possible.
+    Browsers provide valuable functionality for native HTML links, e.g., open the target in a new window and copy the target URL to the system clipboard.
+  </p>
   <section>
     <h2 id="ex_label">Examples</h2>
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
