Fix issue #276 in tabs example
modified examples/tabs/tabs.html:
* Changed link in intro to point to `#tabpanel` instead of `#checkbox`
* Removed   comments that had instructions from the template.

--- a/examples/tabs/tabs.html
+++ b/examples/tabs/tabs.html
@@ -2,37 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!--
-      An example that was implemented with this template can be found in: examples/checkbox/checkbox-1.html.
-      This template is for examples where only one implementation of the design pattern is demonstrated.
-      If you use this template file, rename it to reflect the name of the example, e.g., SimpleCheckbox.html.
-      Similarly, rename the javascript and CSS stub files in the js and css subdirectories and update the head element of this file.
-    -->
-
-    <!--  Give this example implementation a name and put it in the title element, e.g., "Checkbox" if implementing the checkbox pattern.
-    The name should be unique if the pattern will have multiple implementations, e.g., "Simple Two-State Checkbox" or "Three-State Checkbox".
-    -->
     <title>Tabs | WAI-ARIA Authoring Practices 1.1</title>
 
     <!--  Core js and css shared by all examples; do not modify when using this template. -->
     <link href="../css/core.css" rel="stylesheet">
     <link href="../css/table.css" rel="stylesheet">
 
-    <!--  js and css for this example.
-    When developing an example implementation of a design pattern,
-    these files will contain the CSS and JS for the example implementation.
-    Rename these files to match the name of the example, e.g., checkbox.js if implementing the checkbox design pattern.
-    -->
+    <!--  js and css for this example. -->
     <link href="css/tabs.css" rel="stylesheet">
   </head>
   <body>
     <main>
-      <!--  Repeat the name of the example in this H1  -->
       <h1>Tabs</h1>
 
       <p>
-          <!-- Provide an overview of the example where the first sentence provides a link to the section of aria-practices.html that describes the pattern this example implements. -->
-          The below example section demonstrates a tabs widget that implements the  <a href="../../#checkbox">design pattern for tabs</a>.
+          The below example section demonstrates a tabs widget that implements the  <a href="../../#tabpanel">design pattern for tabs</a>.
       </p>
 
       <section>
@@ -203,7 +187,6 @@
     </main>
 
     <nav>
-      <!--  Update the pattern_ID parameter of this link to refer to the APG design pattern section related to this example.  -->
       <a href="../../#tabpanel">Tabs Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
     </nav>
 
