Revise Titles of Tabs Examples
Made the titles of the examples:
1. "Tabs With Automatic Activation"
2. "Tabs With Manual Activation"

modified examples subsection of the tabs pattern in aria-practices.html:
* Changed  link text of links to examples
* Added descriptions of examples after each link

modified examples/tabs/tabs-1/tabs.html:
* Changed title tab and H1 to "Tabs With Automatic Activation"
* Changed link text and description for the link to the manual activation tabs example.

modified examples/tabs/tabs-2/tabs.html
* Changed title tab and H1 to "Tabs With Manual Activation"
* Changed link text and description for the link to the automatic  activation tabs example.

--- a/examples/tabs/tabs-1/tabs.html
+++ b/examples/tabs/tabs-1/tabs.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Tabs (Follows focus) | WAI-ARIA Authoring Practices 1.1</title>
+    <title>Tabs With Automatic Activation | WAI-ARIA Authoring Practices 1.1</title>
 
     <!--  Core js and css shared by all examples; do not modify when using this template. -->
     <link href="../../css/core.css" rel="stylesheet">
@@ -13,16 +13,14 @@
   </head>
   <body>
     <main>
-      <h1>Tabs (Follows focus)</h1>
-
+      <h1>Tabs With Automatic Activation</h1>
       <p>
           This example section demonstrates a tabs widget that implements the  <a href="../../../#tabpanel">design pattern for tabs</a>.
           In this example panels are automatically activated when its tab receives focus.
       </p>
       <p>Similar examples include: </p>
       <ul>
-        <li><a href="../tabs-2/tabs.html">Tabs (Manual activation)</a>: a version of the tabs widget where tabs have to be manually activated via <kbd>space</kbd> or <kbd>enter</kbd>.</li>
-        <!--  list other examples that implement the same design pattern. -->
+        <li><a href="../tabs-2/tabs.html">Tabs With Manual Activation</a>: A tabs widget where users activate a tab and display its panel by pressing <kbd>Space</kbd> or <kbd>Enter</kbd>.</li>
       </ul>
 
       <section>
