--- a/examples/tabs/tabs-2/tabs.html
+++ b/examples/tabs/tabs-2/tabs.html
@@ -12,7 +12,7 @@
     <!--  Give this example implementation a name and put it in the title element, e.g., "Checkbox" if implementing the checkbox pattern.
     The name should be unique if the pattern will have multiple implementations, e.g., "Simple Two-State Checkbox" or "Three-State Checkbox".
     -->
-    <title>Tabs (Manual activation) | WAI-ARIA Authoring Practices 1.1</title>
+    <title>Tabs With Manual Activation | WAI-ARIA Authoring Practices 1.1</title>
 
     <!--  Core js and css shared by all examples; do not modify when using this template. -->
     <link href="../../css/core.css" rel="stylesheet">
@@ -38,7 +38,7 @@
 
       <p>Similar examples include: </p>
       <ul>
-        <li><a href="../tabs-1/tabs.html">Tabs (Follows focus)</a>: a version of the tabs widget where tabs are automatically activated when they receive focus.</li>
+        <li><a href="../tabs-1/tabs.html">Tabs With Automatic Activation</a>: A tabs widget where tabs are automatically activated and their panel is displayed when they receive focus.</li>
         <!--  list other examples that implement the same design pattern. -->
       </ul>
 
