--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1833,10 +1833,10 @@ For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding Whe
         </ul>
       </section>
       <section class="notoc">
-        <h4>Example</h4>
+        <h4>Examples</h4>
         <ul>
-          <li><a href="examples/tabs-1/tabs.html">Tabs Widget Example (Follows focus)</a></li>
-          <li><a href="examples/tabs-2/tabs.html">Tabs Widget Example (Manual activation)</a></li>
+          <li><a href="examples/tabs-1/tabs.html">Tabs With Automatic Activation</a>: A tabs widget where tabs are automatically activated and their panel is displayed when they receive focus.</li>
+          <li><a href="examples/tabs-2/tabs.html">Tabs With Manual Activation</a>: A tabs widget where users activate a tab and display its panel by pressing <kbd>Space</kbd> or <kbd>Enter</kbd>.</li>
         </ul>
       </section>
     </section>
