--- a/examples/tabs/tabs-2/tabs.html
+++ b/examples/tabs/tabs-2/tabs.html
@@ -12,11 +12,11 @@
     <!--  Give this example implementation a name and put it in the title element, e.g., "Checkbox" if implementing the checkbox pattern.
     The name should be unique if the pattern will have multiple implementations, e.g., "Simple Two-State Checkbox" or "Three-State Checkbox".
     -->
-    <title>Tabs | WAI-ARIA Authoring Practices 1.1</title>
+    <title>Tabs With Manual Activation | WAI-ARIA Authoring Practices 1.1</title>
 
     <!--  Core js and css shared by all examples; do not modify when using this template. -->
-    <link href="../css/core.css" rel="stylesheet">
-    <link href="../css/table.css" rel="stylesheet">
+    <link href="../../css/core.css" rel="stylesheet">
+    <link href="../../css/table.css" rel="stylesheet">
 
     <!--  js and css for this example.
     When developing an example implementation of a design pattern,
@@ -28,12 +28,19 @@
   <body>
     <main>
       <!--  Repeat the name of the example in this H1  -->
-      <h1>Tabs</h1>
+      <h1>Tabs (Manual activation)</h1>
 
       <p>
           <!-- Provide an overview of the example where the first sentence provides a link to the section of aria-practices.html that describes the pattern this example implements. -->
           The below example section demonstrates a tabs widget that implements the  <a href="../../#checkbox">design pattern for tabs</a>.
+          In this example panels are shown after you activate a tab with either <kbd>space</kbd>, <kbd>enter</kbd>, or a click.
       </p>
+
+      <p>Similar examples include: </p>
+      <ul>
+        <li><a href="../tabs-1/tabs.html">Tabs With Automatic Activation</a>: A tabs widget where tabs are automatically activated and their panel is displayed when they receive focus.</li>
+        <!--  list other examples that implement the same design pattern. -->
+      </ul>
 
       <section>
         <h2 id="ex_label">Example</h2>
@@ -92,6 +99,10 @@
             </tr>
           </thead>
           <tbody>
+            <tr>
+              <th><kbd>enter</kbd> or <kbd>space</kbd></th>
+              <td>Activates the currently focused tab and shows its panel.</td>
+            </tr>
             <tr>
               <th><kbd>tab</kbd></th>
               <td>Moves focus to the active tab or first focusable in the tab panel.</td>
