Clarify Tab Key Behavior in Tabs pattern
Modified tabs pattern keyboard section of aria-practices.html based on feedback from @shirsha in issue #278.

Changed:
 "Tab: When the tab list receives focus,  places focus on the active <code>tab</code> element ."
 To:
"Tab: When focus  moves into the tab list, places focus on the active <code>tab</code> element ."

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1768,7 +1768,7 @@ For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding Whe
         <p>For the tab list:</p>
         <ul>
           <li>
-            <kbd>Tab</kbd>: When the tab list is receiving focus, places focus on the active <code>tab</code> element .
+            <kbd>Tab</kbd>: When focus moves into the tab list, places focus on the active <code>tab</code> element .
             When the tab list contains the focus, moves focus to the next element in the page tab sequence outside the tablist, which is typically either the first focusable element inside the tab panel or the tab panel itself.
           </li>
           <li>When focus is on a tab element in a horizontal tab list:
