Clarify Tab Key Behavior on Tabs Widget Example Pages
Based on feedback from @shirsha in issue #278, made the two below changes in the following two files:
1. examples/tabs/tabs-1/tabs.html
2. examples/tabs/tabs-2/tabs.html

Change 1:
Changed `When the tab list is receiving focus, places focus on the active <code>tab</code> element .`
To: `When focus moves into the tab list, places focus on the active <code>tab</code> element .`

Change 2:
Changed `When the tab list contains the focus, moves focus to the <code>tabpanel</code> element.`
To: `When the tab list contains the focus, moves focus to the next element in the tab sequence, which is the <code>tabpanel</code> element.`

--- a/examples/tabs/tabs-2/tabs.html
+++ b/examples/tabs/tabs-2/tabs.html
@@ -83,8 +83,8 @@
               <th><kbd>tab</kbd></th>
               <td>
                 <ul>
-                  <li>When the tab list is receiving focus, places focus on the active <code>tab</code> element .</li>
-                  <li>When the tab list contains the focus, moves focus to the <code>tabpanel</code> element.</li>
+                  <li>When focus moves into the tab list, places focus on the active <code>tab</code> element .</li>
+                  <li>When the tab list contains the focus, moves focus to the next element in the tab sequence, which is the <code>tabpanel</code> element.</li>
                 </ul>
               </td>
             </tr>
